add new website from server na

--- a/xem-phim-moi/the-gioi-bi-mat-cua-arrietty/index.html
+++ b/xem-phim-moi/the-gioi-bi-mat-cua-arrietty/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1643,7 +1643,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              The Blood of Youth
             </span>
             <span class="list-top-movie-item-view">
-             50 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1686,21 +1686,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoa-khoi-ben-hoi-truong" title="Hoa khôi bên hội trưởng">
+          <a class="list-top-movie-link" href="/phim-moi/xac-suat-tinh-yeu-12" title="Xác Suất Tình Yêu 12%">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoa-khoi-ben-hoi-truong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xac-suat-tinh-yeu-12-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hoa khôi bên hội trưởng
+             Xác Suất Tình Yêu 12%
             </span>
             <span class="list-top-movie-item-en">
-             Yes, My Lord.
+             My Only 12%
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1708,40 +1708,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tharntype-tu-ghet-toi-yeu-phan-1" title="TharnType: Từ ghét tới yêu (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/bao-mau-gia-danh" title="Bảo Mẫu Giả Danh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tharntype-tu-ghet-toi-yeu-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bao-mau-gia-danh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             TharnType: Từ ghét tới yêu (Phần 1)
+             Bảo Mẫu Giả Danh
             </span>
             <span class="list-top-movie-item-en">
-             TharnType the series (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truy-sat-phan-2" title="Truy sát (Phần 2)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truy-sat-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Truy sát (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Wanted (Season 2)
+             Mrs. Doubtfire
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1752,21 +1730,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/duong-ve-gian-nan" title="Đường Về Gian Nan">
+          <a class="list-top-movie-link" href="/phim-moi/bao-dao-song-hung" title="Bảo Đảo Song Hùng">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/duong-ve-gian-nan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bao-dao-song-hung-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đường Về Gian Nan
+             Bảo Đảo Song Hùng
             </span>
             <span class="list-top-movie-item-en">
-             The Long Way Home
+             Double Trouble
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1774,21 +1752,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xac-song-tro-lai-3" title="Xác Sống Trở Lại 3">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-mua-he" title="Cuộc Chiến Mùa Hè">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xac-song-tro-lai-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-mua-he-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Xác Sống Trở Lại 3
+             Cuộc Chiến Mùa Hè
             </span>
             <span class="list-top-movie-item-en">
-             Return of the Living Dead III
+             Summer Wars
             </span>
             <span class="list-top-movie-item-view">
-             5 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/fate-kaleid-liner-thieu-nu-ma-phap-illya-3rei" title="Fate/kaleid liner Thiếu nữ ma pháp – Illya 3rei!">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/fatekaleid-liner-thieu-nu-ma-phap-illya-3rei-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Fate/kaleid liner Thiếu nữ ma pháp – Illya 3rei!
+            </span>
+            <span class="list-top-movie-item-en">
+             Fate/kaleid liner Magical Girl Ilia Season 4
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
