add new website from server na

--- a/xem-phim-moi/ngon-doi-hoa-hong-anh/index.html
+++ b/xem-phim-moi/ngon-doi-hoa-hong-anh/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1690,18 +1690,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-hung-tia-chop-phan-5" title="Người hùng tia chớp (Phần 5)">
+          <a class="list-top-movie-link" href="/phim-moi/rocks" title="Rocks">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-hung-tia-chop-phan-5-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rocks-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người hùng tia chớp (Phần 5)
+             Rocks
             </span>
             <span class="list-top-movie-item-en">
-             The Flash (Season 5)
+             Rocks
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bai-ca-yeu-thuong" title="Bài Ca Yêu Thương">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bai-ca-yeu-thuong-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bài Ca Yêu Thương
+            </span>
+            <span class="list-top-movie-item-en">
+             Coffee Melody
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1712,21 +1734,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/batman-su-tro-lai-cua-joker" title="Batman: Sự Trở Lại Của Joker">
+          <a class="list-top-movie-link" href="/phim-moi/con-tim-sat-da" title="Con Tim Sắt Đá">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/batman-su-tro-lai-cua-joker-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-tim-sat-da-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Batman: Sự Trở Lại Của Joker
+             Con Tim Sắt Đá
             </span>
             <span class="list-top-movie-item-en">
-             Batman Beyond: Return of the Joker
+             Hua Jai Sila
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             22 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1734,21 +1756,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tho-anh-trai-giam" title="Thợ ảnh trại giam">
+          <a class="list-top-movie-link" href="/phim-moi/nuoc-my-mot-thoi" title="Nước Mỹ Một Thời">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tho-anh-trai-giam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nuoc-my-mot-thoi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thợ ảnh trại giam
+             Nước Mỹ Một Thời
             </span>
             <span class="list-top-movie-item-en">
-             The Photographer Of Mauthausen
+             Once Upon a Time in America
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1756,40 +1778,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/di-nao-cun-con" title="Đi Nào, Cún Con!">
+          <a class="list-top-movie-link" href="/phim-moi/100-nguoi-phan-5" title="100 Người Phần 5">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/di-nao-cun-con-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/100-nguoi-phan-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đi Nào, Cún Con!
+             100 Người Phần 5
             </span>
             <span class="list-top-movie-item-en">
-             Đi Nào, Cún Con!
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/su-phat-trien-cua-hip-hop-phan-3" title="Sự phát triển của Hip-Hop (Phần 3)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-phat-trien-cua-hip-hop-phan-3-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Sự phát triển của Hip-Hop (Phần 3)
-            </span>
-            <span class="list-top-movie-item-en">
-             Hip-Hop Evolution (Season 3)
+             The Hundred (Season 5) - The 100
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
