add new website from server na

--- a/xem-phim-moi/ngon-doi-hoa-hong-anh/index.html
+++ b/xem-phim-moi/ngon-doi-hoa-hong-anh/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1690,18 +1690,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/rocks" title="Rocks">
+          <a class="list-top-movie-link" href="/phim-moi/su-tro-lai-cua-billa-tra-thu-2" title="Sự Trở Lại Của Billa – Trả Thù 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rocks-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-tro-lai-cua-billa-tra-thu-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Rocks
+             Sự Trở Lại Của Billa – Trả Thù 2
             </span>
             <span class="list-top-movie-item-en">
-             Rocks
+             The Return Of Rebel 2
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1712,18 +1712,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bai-ca-yeu-thuong" title="Bài Ca Yêu Thương">
+          <a class="list-top-movie-link" href="/phim-moi/lo-lem-chuyen-chua-ke" title="Lọ Lem: Chuyện Chưa Kể">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bai-ca-yeu-thuong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lo-lem-chuyen-chua-ke-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bài Ca Yêu Thương
+             Lọ Lem: Chuyện Chưa Kể
             </span>
             <span class="list-top-movie-item-en">
-             Coffee Melody
+             Cinderella and the Secret Prince
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1734,40 +1734,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/con-tim-sat-da" title="Con Tim Sắt Đá">
+          <a class="list-top-movie-link" href="/phim-moi/doi-cuu-ho-bai-bien" title="Đội cứu hộ bãi biển">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-tim-sat-da-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-cuu-ho-bai-bien-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Con Tim Sắt Đá
+             Đội cứu hộ bãi biển
             </span>
             <span class="list-top-movie-item-en">
-             Hua Jai Sila
-            </span>
-            <span class="list-top-movie-item-view">
-             22 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nuoc-my-mot-thoi" title="Nước Mỹ Một Thời">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nuoc-my-mot-thoi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nước Mỹ Một Thời
-            </span>
-            <span class="list-top-movie-item-en">
-             Once Upon a Time in America
+             Baywatch
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1778,21 +1756,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/100-nguoi-phan-5" title="100 Người Phần 5">
+          <a class="list-top-movie-link" href="/phim-moi/khung-bo-quoc-te-2" title="Khủng bố quốc tế">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/100-nguoi-phan-5-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khung-bo-quoc-te-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             100 Người Phần 5
+             Khủng bố quốc tế
             </span>
             <span class="list-top-movie-item-en">
-             The Hundred (Season 5) - The 100
+             Extraction
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bo-lao-xi-tin" title="Bô Lão Xì Tin">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-lao-xi-tin-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bô Lão Xì Tin
+            </span>
+            <span class="list-top-movie-item-en">
+             Last Vegas
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
