add new website from server na

--- a/xem-phim-moi/nang-cong-chua-o-thung-lung-gio/index.html
+++ b/xem-phim-moi/nang-cong-chua-o-thung-lung-gio/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1690,40 +1690,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hao-quang-nghiet-nga-phan-2" title="Hào Quang Nghiệt Ngã (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/ke-thong-tri-thoi-gian" title="Kẻ Thống Trị Thời Gian">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hao-quang-nghiet-nga-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-thong-tri-thoi-gian-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hào Quang Nghiệt Ngã (Phần 2)
+             Kẻ Thống Trị Thời Gian
             </span>
             <span class="list-top-movie-item-en">
-             Hidden Truths (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-chet-2" title="Người Chết 2">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-chet-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Người Chết 2
-            </span>
-            <span class="list-top-movie-item-en">
-             Dead Men 2
+             Chronos Ruler
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1734,21 +1712,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vu-an-sao-hoa" title="Vụ Án Sao Hỏa">
+          <a class="list-top-movie-link" href="/phim-moi/sam-smith-love-goes-truc-tiep-tai-abbey-road-studios" title="Sam Smith: Love Goes – Trực tiếp tại Abbey Road Studios">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vu-an-sao-hoa-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sam-smith-love-goes-truc-tiep-tai-abbey-road-studios-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vụ Án Sao Hỏa
+             Sam Smith: Love Goes – Trực tiếp tại Abbey Road Studios
             </span>
             <span class="list-top-movie-item-en">
-             2036 Origin Unknown
+             Sam Smith: Love Goes - Live at Abbey Road Studios
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1756,21 +1734,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tham-tu-lung-danh-conan-ke-hanh-phap-zero" title="Thám Tử Lừng Danh Conan: Kẻ Hành Pháp Zero">
+          <a class="list-top-movie-link" href="/phim-moi/cay-huyet-thong" title="Cây huyết thống">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-lung-danh-conan-ke-hanh-phap-zero-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cay-huyet-thong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thám Tử Lừng Danh Conan: Kẻ Hành Pháp Zero
+             Cây huyết thống
             </span>
             <span class="list-top-movie-item-en">
-             Detective Conan: Zero the Enforcer
+             The Tree of Blood
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1778,21 +1756,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hang-xom-cua-toi-khong-chiu-lon" title="Hàng Xóm Của Tôi Không Chịu Lớn">
+          <a class="list-top-movie-link" href="/phim-moi/chu-ky-lan-noi-bien-ca" title="Chú kỳ lân nơi biển cả">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hang-xom-cua-toi-khong-chiu-lon-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chu-ky-lan-noi-bien-ca-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hàng Xóm Của Tôi Không Chịu Lớn
+             Chú kỳ lân nơi biển cả
             </span>
             <span class="list-top-movie-item-en">
-             My Fated Boy
+             Not Quite Narwhal
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/long-sinh-cuu-tu" title="Long Sinh Cửu Tử">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/long-sinh-cuu-tu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Long Sinh Cửu Tử
+            </span>
+            <span class="list-top-movie-item-en">
+             THE DRAGON NINE
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
