add new website from server na

--- a/xem-phim-bo/than-vo-thien-ton/index.html
+++ b/xem-phim-bo/than-vo-thien-ton/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1618,7 +1618,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              The Blood of Youth
             </span>
             <span class="list-top-movie-item-view">
-             50 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1661,18 +1661,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoa-ra-em-rat-yeu-anh" title="Hóa Ra Em Rất Yêu Anh">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-ngoi-sao-lang-thang" title="Những Ngôi Sao Lang Thang">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoa-ra-em-rat-yeu-anh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-ngoi-sao-lang-thang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hóa Ra Em Rất Yêu Anh
+             Những Ngôi Sao Lang Thang
             </span>
             <span class="list-top-movie-item-en">
-             Crush
+             Wandering Stars
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/khuc-bi-ca-tu-nguon-coi" title="Khúc bi ca từ nguồn cội">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khuc-bi-ca-tu-nguon-coi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Khúc bi ca từ nguồn cội
+            </span>
+            <span class="list-top-movie-item-en">
+             Hillbilly Elegy
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1683,18 +1705,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chip-n-dale-rescue-rangers-phan-1" title="Chip ‘n’ Dale Rescue Rangers (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/bi-kip-yeu-duong-cua-phuong-tieu-thu" title="Bí Kíp Yêu Đương Của Phương Tiểu Thư">
            <span class="status">
-            HD Nosub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chip-n-dale-rescue-rangers-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bi-kip-yeu-duong-cua-phuong-tieu-thu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chip ‘n’ Dale Rescue Rangers (Phần 1)
+             Bí Kíp Yêu Đương Của Phương Tiểu Thư
             </span>
             <span class="list-top-movie-item-en">
-             Chip 'n' Dale Rescue Rangers (Season 1)
+             Miss Fang's Love Secrets
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/high-school-musical-3-le-tot-nghiep" title="High School Musical 3: Lễ Tốt Nghiệp">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/high-school-musical-3-le-tot-nghiep-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             High School Musical 3: Lễ Tốt Nghiệp
+            </span>
+            <span class="list-top-movie-item-en">
+             High School Musical 3: Senior Year
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1705,65 +1749,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ong-hoang-giai-do" title="Ông Hoàng Giải Đố">
+          <a class="list-top-movie-link" href="/phim-moi/oats-studios" title="Oats Studios">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ong-hoang-giai-do-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/oats-studios-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ông Hoàng Giải Đố
+             Oats Studios
             </span>
             <span class="list-top-movie-item-en">
-             7O3X Fastest Finger First
+             Oats Studios
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-ay-mat-tich" title="Cô Ấy Mất Tích">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-ay-mat-tich-2023-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cô Ấy Mất Tích
-            </span>
-            <span class="list-top-movie-item-en">
-             Lost in the Stars | 消失的她
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ao-thuat-gia-duong-pho" title="Ảo thuật gia đường phố">
-           <span class="status">
-            Vietsub - HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ao-thuat-gia-duong-pho-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ảo thuật gia đường phố
-            </span>
-            <span class="list-top-movie-item-en">
-             Sleight
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
